# HIL-SERL-Actor-Local

./: .gitignore  galaxea_walkthrough.md  latest_output.md  readme
HIL-SERL-Project/examples/: 10demo_replay_episode_by_episode_reset_diagnostics.csv  30demo_replay_episode_by_episode_reset_diagnostics.csv  demo_replay_action_check.csv  demo_replay_full_motion_diagnostics_env_timing.csv  export_wandb_history.py  readme  record_demos.py  record_success_fail.py  run_record_demos_ros.sh  train_bc.py  train_hgdagger.py  train_reward_classifier.py  train_rlpd.py  train_rlpd_actor_gpu.py  train_rlpd_grasp_penalty_synced.py
HIL-SERL-Project/examples/classifier_ckpt_single/: classifier_metadata.json  replay_saved_episode.py
HIL-SERL-Project/examples/demo_data/: play_demos_pkl.py
HIL-SERL-Project/examples/demo_data_single/: galaxea_usb_insertion_single_abs2rel_report_2026-04-29_16-18-23.json  galaxea_usb_insertion_single_abs2rel_report_2026-04-29_17-13-28.json  play_demos_pkl.py  prune_demo_episodes.py  replay_demo_actions.py
HIL-SERL-Project/serl_launcher/: readme
HIL-SERL-Project/serl_robot_infra/Galaxea_env/VR/ros2_ws/src/teleoperation_msg_ros2/: CMakeLists.txt  package.xml
HIL-SERL-Project/serl_robot_infra/Galaxea_env/VR/ros2_ws/src/teleoperation_msg_ros2/msg/: VrPose.msg
HIL-SERL-Project/serl_robot_infra/Galaxea_env/VR/ros2_ws/src/teleoperation_msg_ros2/srv/: SwitchControlModeVR.srv
word/: readme介绍i.docx  数据正常，单纯actor动作输出增量大的解决分析.docx  旧conda的环境.docx  本地复现.docx  经验池+奖励分析.docx  通信模块迁移.docx
word/VR接管/: .~R接管尝试1.docx  VR信号合集.docx  VR接管尝试1.docx  VR接管尝试2.docx
(+51 files in other folders)
